# app/controllers/user.controller.js
@@ -306,9 +306,7 @@ exports.createAupairProfile = async (req, res) => {
       genero,
       nacionalidade,
       numero_identificacao_nacional,
-      resumo,
-      passaporte,
-      habilitacao_pid,
+      tipo_documento,
       habilitacao,
       quantidade_criancas,
       experiencia_trabalho,
@@ -340,9 +338,7 @@ exports.createAupairProfile = async (req, res) => {
       genero,
       nacionalidade,
       numero_identificacao_nacional,
-      resumo,
-      passaporte,
-      habilitacao_pid,
+      tipo_documento,
       habilitacao,
       quantidade_criancas,
       experiencia_trabalho,
